Change color from green –> orange & fix contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,5 +88,5 @@ select {
 }
 
 .project a {
-  @apply underline hover:text-green-500;
+  @apply underline hover:text-orange-500;
 }
